add rebrand change notes [#168741047]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -5,6 +5,10 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
+<%= partial '../../eva/partials/branding-change' %>
+
+<%= partial '../../eva/partials/pcf-name-change' %>
+
 This documentation describes <%= vars.product_name %>.
 
 ## <a id='overview'></a>Overview
