--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,6 +5,10 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
+<%= partial '../../eva/partials/branding-change' %>
+
+<%= partial '../../eva/partials/pcf-name-change' %>
+
 ##<a id="1-3-0"></a> v1.3.x
 
 **Release Date: MMM XX, 2019**
