add rebrand change notes [#168741047]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,6 +5,10 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
+<%= partial '../../eva/partials/branding-change' %>
+
+<%= partial '../../eva/partials/pcf-name-change' %>
+
 ##<a id="1-2-8"></a> v1.2.8
 
 **Release Date: July 2, 2019**
