--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -52,7 +52,7 @@ The following table provides version and version-support information about <%= v
         <td>MMM XX, 2018</td>
     </tr>
     <tr>
-        <td>Compatible Ops Manager version(s)</td>
+        <td>Compatible Pivotal Ops Manager version(s)</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
