updating more stuff [#168741047]

--- a/_deployfails-ki.html.md.erb
+++ b/_deployfails-ki.html.md.erb
@@ -1,5 +1,5 @@
-+ **Deploy PCF Event Alerts Errand Fails:** If you have binary logging enabled,
-the **Deploy PCF Event Alerts** errand fails when `log_bin_trust_function_creators` is not set to `1`. 
-If you do not resolve this issue, PCF Event Alerts is not deployed.
-For instructions on solving this issue, 
-see [Deploy PCF Event Alerts Errand Fails](./troubleshooting.html#t-shoot-errors). 
++ **Deploy <%= vars.product_name %> Errand Fails:** If you have binary logging enabled,
+the **Deploy <%= vars.product_name %>** errand fails when `log_bin_trust_function_creators` is not set to `1`.
+If you do not resolve this issue, <%= vars.product_name %> is not deployed.
+For instructions on solving this issue,
+see [Deploy <%= vars.product_name %> Errand Fails](./troubleshooting.html#t-shoot-errors).
