--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -53,7 +53,7 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>Compatible Pivotal Ops Manager version(s)</td>
-        <td>2.3, 2.4, 2.5, and 2.6</td>
+        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
