--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -31,7 +31,7 @@ Follow the procedures below to download and install the <%= vars.product_name %>
 
 1. Download the product file from [Pivotal Network](https://network.pivotal.io/products/p-event-alerts/).
 
-1. Navigate to the Ops Manager Installation Dashboard and click **Import a Product** to upload the product file.
+1. Navigate to the Pivotal Ops Manager Installation Dashboard and click **Import a Product** to upload the product file.
 
 1. Under the **Import a Product** button, click **+** next to the version number of <%= vars.product_name %>.
 This adds the tile to your staging area.
@@ -187,7 +187,7 @@ If you want to use an external database for <%= vars.product_name %>, follow the
 
 ### <a id="email_settings"></a> Configure Email Notifications
 
-Follow the steps below to configure settings for Event Alerts email notifications.
+Follow the steps below to configure settings for <%= vars.product_name %> email notifications.
 
 1. Click the **Email Configuration** tab.
 
