--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -67,8 +67,8 @@ If you do not resolve this issue, <%= vars.product_name %> is not deployed.
 
 #### Symptom
 
-When you **Apply Changes**, you see in the Ops Manager installation pane that the
-**Deploy <%= vars.product_name %>** errand fails with the following error:
+When you **Apply Changes**, you see in the Pivotal Ops Manager installation pane that
+the **Deploy <%= vars.product_name %>** errand fails with the following error:
 
 <pre class="terminal">
 You do not have the SUPER privilege and
