--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -56,8 +56,8 @@ The following table provides version and version-support information about <%= v
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
+        <td>Compatible Pivotal Application Service version(s)</td>
+        <td>2.3, 2.4, 2.5, 2.6 and 2.7</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Healthwatch version(s)</td>
