--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,8 +14,8 @@ see [Using <%= vars.product_name %>](./using.html).
 
 You must have the following in order to install <%= vars.product_name %>:
 
-+ PAS v2.1.x or later
-+ MySQL for Pivotal Platform  v2 or credentials for an existing external MySQL database v5.7 or later.
++ Pivotal Application Service v2.1.x or later
++ MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_name %> tile
@@ -68,7 +68,7 @@ Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.produ
     <tr>
       <td><strong>Network</strong></td>
       <td>Select a subnet for the <%= vars.product_name %> errands.
-          Use the subnet that includes the Pivotal Application Service (PAS) component VMs.
+          Use the subnet that includes the Pivotal Application Service component VMs.
       <p class="note"><strong>Note</strong>: The network selected is used only by errand VMs.</p>
       </td>
     </tr>
