update partial path [#167545617]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,9 +5,9 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
-<%= partial '../../eva/partials/branding-change' %>
+<%= partial vars.path_to_partials + "branding-change" %>
 
-<%= partial '../../eva/partials/pcf-name-change' %>
+<%= partial vars.path_to_partials + "pcf-name-change" %>
 
 ##<a id="1-3-0"></a> v1.3.x
 
