--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -5,9 +5,9 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
-<%= partial '../../eva/partials/branding-change' %>
+<%= partial vars.path_to_partials + "branding-change" %>
 
-<%= partial '../../eva/partials/pcf-name-change' %>
+<%= partial vars.path_to_partials + "pcf-name-change" %>
 
 This documentation describes <%= vars.product_name %>.
 
