--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,9 +5,9 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
-<%= partial vars.path_to_partials + "branding-change" %>
+<%= partial vars.path_to_partials + "/branding-change" %>
 
-<%= partial vars.path_to_partials + "pcf-name-change" %>
+<%= partial vars.path_to_partials + "/pcf-name-change" %>
 
 ##<a id="1-2-8"></a> v1.2.8
 
