fix partial name  [#167545617]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -27,7 +27,7 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
@@ -60,7 +60,7 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
@@ -83,7 +83,7 @@ New features and changes in this release:
 
 This release has the following issues:
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
@@ -116,7 +116,7 @@ of <%= vars.product_name %>. The version numbers now match.
 
 This release has the following issues:
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
@@ -158,7 +158,7 @@ This release fixes the following issue:
 
 This release has the following issues:
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 * When using <%= vars.product_name %> and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database,
  <%= vars.product_name %> do not function.
@@ -198,7 +198,7 @@ This release has the following issues:
 * Users of <%= vars.product_name %> v1.2.1 are required to use escape characters in configuration passwords.
   This is no longer required in <%= vars.product_name %> v1.2.3 and later releases.
 
-<%= partial vars.path_to_partials + "/eva/azure-username-ki" %>
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
 * The tile version in the tile metadata might not match the version of <%= vars.product_name %>.
 These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
