--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -17,7 +17,7 @@ To monitor the performance of <%= vars.product_name %> or to retrieve troublesho
 * Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app.
   For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html).
 * Use the Pivotal App Metrics service.
-  For more information, see [Pivotal App Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
+  For more information, see [Pivotal App Metrics](https://docs.pivotal.io/app-metrics/index.html).
 * Use the Pivotal Metrics Forwarder service.
   The `event-alerts` app detects if you have an available instance of Pivotal Metrics Forwarder
   and transmits custom app metrics through Loggregator to the service.
