--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -16,7 +16,7 @@ To monitor the performance of PCF Event Alerts or to retrieve troubleshooting in
 * Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app.
   For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html).
 * Use the PCF Metrics service.
-  For more information, see [PCF Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
+  For more information, see [PCF Metrics](https://docs.pivotal.io/app-metrics/index.html).
 * Use the Metrics Forwarder for PCF service.
   The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF
   and transmits custom app metrics through Loggregator to the service.
